--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 
       <div class="circle-container">
         <div class="circle">
-          <a href="/"><img src="/img/chapeu.com.png" alt="" /></a>
+          <a href="/"><img src="/img/haticon.png" alt="" /></a>
         </div>
       </div>
 
